--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal Inmobiliario</title>
   <style>
-body { 
-  font-family: Arial, sans-serif; 
-  padding: 20px; 
-  background: #f0f0f0; 
-}
+    body { 
+      font-family: Arial, sans-serif; 
+      padding: 20px; 
+      background: #f0f0f0; 
+    }
 
-h1 { 
-  color: #333; 
-}
+    h1 { 
+      color: #333; 
+    }
 
-.propiedad {
-  background: #fff;
-  padding: 20px;
-  margin-bottom: 15px;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  transition: transform 0.2s, box-shadow 0.2s;
-}
+    #propiedades {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
 
-.propiedad:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-}
+    .propiedad {
+      background: #fff;
+      padding: 20px;
+      margin-bottom: 15px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
 
-.propiedad img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 8px;
-}
+    .propiedad:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+    }
 
-.propiedad h2 {
-  margin: 10px 0 5px;
-  font-size: 1.2em;
-}
+    .propiedad img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
 
-.propiedad p {
-  margin: 5px 0;
-}
+    .propiedad h2 {
+      margin: 10px 0 5px;
+      font-size: 1.2em;
+    }
 
-.propiedad .precio {
-  color: #E74C3C;
-  font-weight: bold;
-  font-size: 1.2em;
-}
-</style>
+    .propiedad p {
+      margin: 5px 0;
+    }
+
+    .propiedad .precio {
+      color: #E74C3C;
+      font-weight: bold;
+      font-size: 1.2em;
+    }
+  </style>
 </head>
 <body>
   <h1>Portal Inmobiliario 🏡</h1>
