Cambiar botón a Pon tu anuncio y precio con €

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 
   <main>
     <form id="formPropiedad">
-      <h2>Agregar nueva propiedad</h2>
+      <h2>Pon tu anuncio</h2>
       <input type="text" id="titulo" placeholder="Título" required />
       <textarea id="descripcion" placeholder="Descripción"></textarea>
       <input type="number" id="precio" placeholder="Precio" required />
