--- a/public/index.html
+++ b/public/index.html
@@ -5,175 +5,175 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal Inmobiliario</title>
   <style>
-    body {
-      font-family: "Segoe UI", Arial, sans-serif;
-      background: #f4f6f8;
+    body { 
+      font-family: Arial, sans-serif; 
+      padding: 20px; 
+      background: #f0f0f0; 
       margin: 0;
-      padding: 0;
     }
 
-    header {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
+    h1 { color: #333; text-align: center; }
+    h2 { margin-top: 0; }
 
-    header h1 {
-      margin: 0;
-      font-size: 1.8em;
-    }
-
-    main {
-      max-width: 1000px;
-      margin: 30px auto;
-      padding: 0 20px;
-    }
+    /* Contenedor principal */
+    #container { max-width: 1200px; margin: auto; }
 
     /* Formulario */
-    form {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      margin-bottom: 30px;
+    #formulario {
+      background: #fff; 
+      padding: 20px; 
+      border-radius: 10px; 
+      margin-bottom: 30px; 
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-
-    form h2 {
-      margin-top: 0;
-      color: #333;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0 15px 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+    #formulario input, #formulario textarea, #formulario button {
+      width: 100%; 
+      margin: 8px 0; 
+      padding: 12px; 
+      border-radius: 6px; 
+      border: 1px solid #ccc; 
       font-size: 1em;
+      box-sizing: border-box;
     }
-
-    button {
-      background-color: #27ae60;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 6px;
-      cursor: pointer;
+    #formulario button { 
+      background: #3498DB; 
+      color: #fff; 
+      border: none; 
+      cursor: pointer; 
       font-weight: bold;
+      transition: background 0.3s;
     }
+    #formulario button:hover { background: #2980B9; }
 
-    button:hover {
-      background-color: #219150;
-    }
-
-    /* Grid de propiedades */
+    /* Propiedades */
     #propiedades {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
     }
-
     .propiedad {
-      background: white;
-      padding: 15px;
+      background: #fff;
+      padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: transform 0.2s, box-shadow 0.2s;
     }
-
     .propiedad:hover {
       transform: translateY(-5px);
-      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
     }
-
     .propiedad img {
       width: 100%;
-      height: 180px;
+      height: 200px;
       object-fit: cover;
       border-radius: 8px;
-      margin-bottom: 10px;
     }
+    .propiedad h2 { margin: 10px 0 5px; font-size: 1.2em; }
+    .propiedad p { margin: 5px 0; }
+    .precio { color: #E74C3C; font-weight: bold; font-size: 1.2em; }
 
-    .precio {
-      color: #e74c3c;
-      font-weight: bold;
-      font-size: 1.1em;
+    /* Responsive para móviles */
+    @media (max-width: 600px) {
+      #formulario { padding: 15px; }
+      .propiedad img { height: 150px; }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>🏡 Portal Inmobiliario</h1>
-  </header>
+  <div id="container">
+    <h1>Portal Inmobiliario 🏡</h1>
 
-  <main>
-    <form id="formPropiedad">
+    <!-- Formulario para poner tu anuncio -->
+    <div id="formulario">
       <h2>Pon tu anuncio</h2>
-      <input type="text" id="titulo" placeholder="Título" required />
+      <input type="text" id="titulo" placeholder="Título" required>
       <textarea id="descripcion" placeholder="Descripción"></textarea>
-      <input type="number" id="precio" placeholder="Precio" required />
-      <input type="text" id="direccion" placeholder="Dirección" required />
-      <input type="text" id="imagen" placeholder="URL de imagen" />
-      <button type="submit">Agregar propiedad</button>
-    </form>
+      <input type="number" id="precio" placeholder="Precio (€)" min="0" required>
+      <input type="text" id="direccion" placeholder="Dirección" required>
+      <input type="url" id="imagen" placeholder="URL de la imagen (opcional)">
+      <button onclick="agregarPropiedad()">Publicar</button>
+    </div>
 
-    <section id="propiedades"></section>
-  </main>
+    <!-- Contenedor de propiedades -->
+    <div id="propiedades"></div>
+  </div>
 
   <script>
-    const API_URL = "/propiedades";
-
     async function cargarPropiedades() {
-      const res = await fetch(API_URL);
-      const propiedades = await res.json();
-      const contenedor = document.getElementById("propiedades");
-      contenedor.innerHTML = "";
+      try {
+        const res = await fetch("/propiedades");
+        const propiedades = await res.json();
+        const contenedor = document.getElementById("propiedades");
+        contenedor.innerHTML = "";
 
-      if (propiedades.length === 0) {
-        contenedor.innerHTML = "<p>No hay propiedades todavía.</p>";
+        if(propiedades.length === 0){
+          contenedor.innerHTML = "<p>No hay propiedades todavía.</p>";
+          return;
+        }
+
+        propiedades.forEach(p => {
+          const div = document.createElement("div");
+          div.className = "propiedad";
+          div.innerHTML = `
+            <h2>${p.titulo}</h2>
+            <p>${p.descripcion || ""}</p>
+            <p class="precio">${p.precio} €</p>
+            <p><strong>Dirección:</strong> ${p.direccion}</p>
+            ${p.imagen ? `<img src="${p.imagen}" alt="${p.titulo}">` : ""}
+          `;
+          contenedor.appendChild(div);
+        });
+      } catch (err) {
+        console.error("Error cargando propiedades:", err);
+      }
+    }
+
+    async function agregarPropiedad() {
+      const titulo = document.getElementById("titulo").value.trim();
+      const descripcion = document.getElementById("descripcion").value.trim();
+      const precio = parseFloat(document.getElementById("precio").value);
+      const direccion = document.getElementById("direccion").value.trim();
+      const imagen = document.getElementById("imagen").value.trim();
+
+      if(!titulo || !precio || !direccion) {
+        alert("Por favor, completa los campos obligatorios.");
         return;
       }
 
-      propiedades.forEach(p => {
-        const div = document.createElement("div");
-        div.className = "propiedad";
-        div.innerHTML = `
-          <img src="${p.imagen || 'https://via.placeholder.com/400'}" alt="${p.titulo}">
-          <h3>${p.titulo}</h3>
-          <p>${p.descripcion || ""}</p>
-          <p class="precio">${p.precio.toLocaleString()} €</p>
-          <p><strong>${p.direccion}</strong></p>
-        `;
-        contenedor.appendChild(div);
-      });
+      if(imagen && !/^https?:\/\/.+\.(jpg|jpeg|png|gif|webp)$/i.test(imagen)) {
+        alert("Por favor, ingresa una URL de imagen válida.");
+        return;
+      }
+
+      try {
+        const res = await fetch("/propiedades", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ titulo, descripcion, precio, direccion, imagen })
+        });
+
+        if(res.ok) {
+          alert("Propiedad publicada ✅");
+          document.getElementById("titulo").value = "";
+          document.getElementById("descripcion").value = "";
+          document.getElementById("precio").value = "";
+          document.getElementById("direccion").value = "";
+          document.getElementById("imagen").value = "";
+          cargarPropiedades();
+        } else {
+          alert("Error al publicar la propiedad.");
+        }
+      } catch (err) {
+        console.error("Error al agregar propiedad:", err);
+      }
     }
-
-    document.getElementById("formPropiedad").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const nueva = {
-        titulo: document.getElementById("titulo").value,
-        descripcion: document.getElementById("descripcion").value,
-        precio: parseFloat(document.getElementById("precio").value),
-        direccion: document.getElementById("direccion").value,
-        imagen: document.getElementById("imagen").value
-      };
-
-      await fetch(API_URL, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(nueva)
-      });
-
-      e.target.reset();
-      cargarPropiedades();
-    });
 
     cargarPropiedades();
   </script>
 </body>
 </html>
+
+
 
 
 
