--- a/public/index.html
+++ b/public/index.html
@@ -5,52 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal Inmobiliario</title>
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      padding: 20px; 
-      background: #f0f0f0; 
-      margin: 0;
-    }
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
+    h1 { color: #333; }
 
-    h1 { color: #333; text-align: center; }
-    h2 { margin-top: 0; }
-
-    /* Contenedor principal */
-    #container { max-width: 1200px; margin: auto; }
-
-    /* Formulario */
-    #formulario {
-      background: #fff; 
-      padding: 20px; 
-      border-radius: 10px; 
-      margin-bottom: 30px; 
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    #formulario input, #formulario textarea, #formulario button {
-      width: 100%; 
-      margin: 8px 0; 
-      padding: 12px; 
-      border-radius: 6px; 
-      border: 1px solid #ccc; 
-      font-size: 1em;
-      box-sizing: border-box;
-    }
-    #formulario button { 
-      background: #3498DB; 
-      color: #fff; 
-      border: none; 
-      cursor: pointer; 
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-    #formulario button:hover { background: #2980B9; }
-
-    /* Propiedades */
     #propiedades {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
+      margin-top: 20px;
     }
+
     .propiedad {
       background: #fff;
       padding: 20px;
@@ -58,45 +22,81 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: transform 0.2s, box-shadow 0.2s;
     }
+
     .propiedad:hover {
       transform: translateY(-5px);
       box-shadow: 0 8px 25px rgba(0,0,0,0.15);
     }
+
     .propiedad img {
       width: 100%;
       height: 200px;
       object-fit: cover;
       border-radius: 8px;
     }
-    .propiedad h2 { margin: 10px 0 5px; font-size: 1.2em; }
-    .propiedad p { margin: 5px 0; }
-    .precio { color: #E74C3C; font-weight: bold; font-size: 1.2em; }
 
-    /* Responsive para móviles */
-    @media (max-width: 600px) {
-      #formulario { padding: 15px; }
-      .propiedad img { height: 150px; }
+    .propiedad h2 {
+      margin: 10px 0 5px;
+      font-size: 1.2em;
+    }
+
+    .propiedad p {
+      margin: 5px 0;
+    }
+
+    .propiedad .precio {
+      color: #E74C3C;
+      font-weight: bold;
+      font-size: 1.2em;
+    }
+
+    /* Estilos del formulario */
+    #formulario-anuncio {
+      display: none;
+      background: #fff;
+      padding: 15px;
+      margin-top: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    #formulario-anuncio input, #formulario-anuncio textarea, #formulario-anuncio button {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    #btn-pon-anuncio {
+      background-color: #3498DB;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    #btn-pon-anuncio:hover {
+      background-color: #2980B9;
     }
   </style>
 </head>
 <body>
-  <div id="container">
+  <!-- 🌈 Banner animado fijo -->
+  <header class="banner">
     <h1>Portal Inmobiliario 🏡</h1>
-
-    <!-- Formulario para poner tu anuncio -->
-    <div id="formulario">
-      <h2>Pon tu anuncio</h2>
-      <input type="text" id="titulo" placeholder="Título" required>
-      <textarea id="descripcion" placeholder="Descripción"></textarea>
-      <input type="number" id="precio" placeholder="Precio (€)" min="0" required>
-      <input type="text" id="direccion" placeholder="Dirección" required>
-      <input type="url" id="imagen" placeholder="URL de la imagen (opcional)">
-      <button onclick="agregarPropiedad()">Publicar</button>
+    <div class="menu">
+      <button class="dropdown-btn">Pon tu anuncio ⬇️</button>
+      <div class="dropdown-content">
+        <a href="#">Añadir propiedad</a>
+      </div>
     </div>
+  </header>
 
-    <!-- Contenedor de propiedades -->
-    <div id="propiedades"></div>
-  </div>
+  <div id="propiedades" style="margin-top: 120px;"></div>
 
   <script>
     async function cargarPropiedades() {
@@ -106,7 +106,7 @@
         const contenedor = document.getElementById("propiedades");
         contenedor.innerHTML = "";
 
-        if(propiedades.length === 0){
+        if (propiedades.length === 0) {
           contenedor.innerHTML = "<p>No hay propiedades todavía.</p>";
           return;
         }
@@ -128,50 +128,91 @@
       }
     }
 
-    async function agregarPropiedad() {
-      const titulo = document.getElementById("titulo").value.trim();
-      const descripcion = document.getElementById("descripcion").value.trim();
-      const precio = parseFloat(document.getElementById("precio").value);
-      const direccion = document.getElementById("direccion").value.trim();
-      const imagen = document.getElementById("imagen").value.trim();
-
-      if(!titulo || !precio || !direccion) {
-        alert("Por favor, completa los campos obligatorios.");
-        return;
-      }
-
-      if(imagen && !/^https?:\/\/.+\.(jpg|jpeg|png|gif|webp)$/i.test(imagen)) {
-        alert("Por favor, ingresa una URL de imagen válida.");
-        return;
-      }
-
-      try {
-        const res = await fetch("/propiedades", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ titulo, descripcion, precio, direccion, imagen })
-        });
-
-        if(res.ok) {
-          alert("Propiedad publicada ✅");
-          document.getElementById("titulo").value = "";
-          document.getElementById("descripcion").value = "";
-          document.getElementById("precio").value = "";
-          document.getElementById("direccion").value = "";
-          document.getElementById("imagen").value = "";
-          cargarPropiedades();
-        } else {
-          alert("Error al publicar la propiedad.");
-        }
-      } catch (err) {
-        console.error("Error al agregar propiedad:", err);
-      }
-    }
-
     cargarPropiedades();
   </script>
+
+  <style>
+    /* 🌈 Banner animado */
+    .banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: linear-gradient(270deg, #6dd5fa, #2980b9, #6dd5fa);
+      background-size: 400% 400%;
+      animation: gradientMove 10s ease infinite;
+      color: white;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      z-index: 1000;
+    }
+
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .banner h1 {
+      margin: 0;
+      font-size: 1.5em;
+    }
+
+    /* 🌟 Menú desplegable */
+    .menu {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-btn {
+      background-color: white;
+      color: #2980b9;
+      padding: 10px 16px;
+      font-size: 1em;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .dropdown-btn:hover {
+      background-color: #f0f0f0;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: white;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      z-index: 1001;
+    }
+
+    .dropdown-content a {
+      color: #2980b9;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      transition: background 0.2s;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #f1f1f1;
+    }
+
+    .menu:hover .dropdown-content {
+      display: block;
+    }
+  </style>
 </body>
 </html>
+
+
+
 
 
 
