--- a/public/index.html
+++ b/public/index.html
@@ -5,61 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal Inmobiliario</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
-    h1 { color: #333; }
+    body { font-family: Arial, sans-serif; padding: 0; margin: 0; background: #f0f0f0; }
 
-    #propiedades {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .propiedad {
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-
-    .propiedad:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
-    }
-
-    .propiedad img {
+    /* Banner animado */
+    .banner {
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: linear-gradient(270deg, #6dd5fa, #2980b9, #6dd5fa);
+      background-size: 400% 400%;
+      animation: gradientMove 10s ease infinite;
+      color: white;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      z-index: 1000;
     }
-
-    .propiedad h2 {
-      margin: 10px 0 5px;
-      font-size: 1.2em;
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
+    .banner h1 { margin: 0; font-size: 1.5em; }
 
-    .propiedad p {
-      margin: 5px 0;
+    /* Menú desplegable */
+    .menu { position: relative; display: inline-block; }
+    .dropdown-btn {
+      background-color: white;
+      color: #2980b9;
+      padding: 10px 16px;
+      font-size: 1em;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
     }
-
-    .propiedad .precio {
-      color: #E74C3C;
-      font-weight: bold;
-      font-size: 1.2em;
-    }
-
-    /* Estilos del formulario */
-    #formulario-anuncio {
+    .dropdown-btn:hover { background-color: #f0f0f0; }
+    .dropdown-content {
       display: none;
-      background: #fff;
-      padding: 15px;
-      margin-top: 20px;
+      position: absolute;
+      background-color: white;
+      min-width: 200px;
+      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
       border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      z-index: 1001;
+      padding: 10px;
     }
+    .menu:hover .dropdown-content { display: block; }
 
+    /* Formulario */
+    #formulario-anuncio {
+      display: flex;
+      flex-direction: column;
+    }
     #formulario-anuncio input, #formulario-anuncio textarea, #formulario-anuncio button {
       width: 100%;
       margin-bottom: 10px;
@@ -68,35 +69,66 @@
       border: 1px solid #ccc;
       box-sizing: border-box;
     }
-
-    #btn-pon-anuncio {
+    #formulario-anuncio button {
       background-color: #3498DB;
       color: white;
-      padding: 10px 15px;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
       font-size: 1em;
     }
-
-    #btn-pon-anuncio:hover {
+    #formulario-anuncio button:hover {
       background-color: #2980B9;
     }
+
+    /* Propiedades */
+    #propiedades {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 20px;
+      margin-top: 90px; /* espacio debajo del banner */
+    }
+    .propiedad {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .propiedad:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+    }
+    .propiedad img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+    .propiedad h2 { margin: 10px 0 5px; font-size: 1.2em; }
+    .propiedad p { margin: 5px 0; }
+    .propiedad .precio { color: #E74C3C; font-weight: bold; font-size: 1.2em; }
   </style>
 </head>
 <body>
-  <!-- 🌈 Banner animado fijo -->
   <header class="banner">
     <h1>Portal Inmobiliario 🏡</h1>
     <div class="menu">
       <button class="dropdown-btn">Pon tu anuncio ⬇️</button>
       <div class="dropdown-content">
-        <a href="#">Añadir propiedad</a>
+        <form id="formulario-anuncio">
+          <input type="text" id="titulo" placeholder="Título" required>
+          <textarea id="descripcion" placeholder="Descripción"></textarea>
+          <input type="number" id="precio" placeholder="Precio (€)" required>
+          <input type="text" id="direccion" placeholder="Dirección" required>
+          <input type="text" id="imagen" placeholder="URL de la imagen">
+          <button type="submit">Añadir propiedad</button>
+        </form>
       </div>
     </div>
   </header>
 
-  <div id="propiedades" style="margin-top: 120px;"></div>
+  <div id="propiedades"></div>
 
   <script>
     async function cargarPropiedades() {
@@ -129,87 +161,42 @@
     }
 
     cargarPropiedades();
+
+    // 📝 Enviar nueva propiedad
+    const formulario = document.getElementById("formulario-anuncio");
+    formulario.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const nuevaProp = {
+        titulo: document.getElementById("titulo").value,
+        descripcion: document.getElementById("descripcion").value,
+        precio: Number(document.getElementById("precio").value),
+        direccion: document.getElementById("direccion").value,
+        imagen: document.getElementById("imagen").value
+      };
+
+      try {
+        const res = await fetch("/propiedades", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(nuevaProp)
+        });
+
+        if (res.ok) {
+          cargarPropiedades();
+          formulario.reset();
+          alert("Propiedad añadida con éxito ✅");
+        } else {
+          alert("Error al añadir propiedad");
+        }
+      } catch (err) {
+        console.error(err);
+        alert("Error al añadir propiedad");
+      }
+    });
   </script>
-
-  <style>
-    /* 🌈 Banner animado */
-    .banner {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: linear-gradient(270deg, #6dd5fa, #2980b9, #6dd5fa);
-      background-size: 400% 400%;
-      animation: gradientMove 10s ease infinite;
-      color: white;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      z-index: 1000;
-    }
-
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .banner h1 {
-      margin: 0;
-      font-size: 1.5em;
-    }
-
-    /* 🌟 Menú desplegable */
-    .menu {
-      position: relative;
-      display: inline-block;
-    }
-
-    .dropdown-btn {
-      background-color: white;
-      color: #2980b9;
-      padding: 10px 16px;
-      font-size: 1em;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .dropdown-btn:hover {
-      background-color: #f0f0f0;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: white;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-      border-radius: 8px;
-      z-index: 1001;
-    }
-
-    .dropdown-content a {
-      color: #2980b9;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      transition: background 0.2s;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #f1f1f1;
-    }
-
-    .menu:hover .dropdown-content {
-      display: block;
-    }
-  </style>
 </body>
 </html>
+
 
 
 
